# mark-sentinel

./: .dockerignore  .gitignore  ARCHITECTURE.md  Arckon.entitlements  BUG_FIX_DIGEST.md  CHANGELOG.md  DEMO_GUIDE.html  Dockerfile  HANDOFF.md  HASH_BRIEF_audit_log.md  LICENSE  PROJECT-PLAN.md  README.md  Sentinel.entitlements  academy.py  agent.py  agent_config.json.example  alerts.py  alerts_config.json.example  audit.py  audit_history.py  audit_safe.py  billing.py  deploy-local.sh  discovery.py  install.bat  install.ps1  install.sh  launch_arckon.bat  launch_arckon.sh  launch_dashboard.bat  launch_dashboard.command  launch_sentinel.bat  launch_sentinel.sh  license.json  license.py  pyproject.toml  requirements.txt  run_agent_hidden.vbs  server.py  (+8 more)
admin/: Dockerfile  app.py  auth.py  db.py  dns_connector.py  install.ps1  install.sh  mailer.py  monitor.py  requirements.txt
benchmarks/: AI_Security_Benchmark_v1.0.md
checks/: AI-AGENT.md  AI-DEPLOY.md  AI-GOV.md  AI-INP.md  AI-OUT.md  AI-RUNTIME.md  AI-SUPPLY.md  AI-TOOL.md  __init__.py  agentic.py  ai_connections.py  ai_tools.py  deploy.py  docker.py  governance.py  input_safety.py  kubernetes.py  lifesciences.py  output_safety.py  runtime.py  supply_chain.py
connectors/: api_connector.py  claude_connector.py  config_connector.py  defectdojo_connector.py  dns_connector.py  docker_connector.py  gemini_connector.py  hash_connector.py  kubectl_connector.py  ollama_connector.py  presidio_connector.py  siem_connector.py  vertex_connector.py
demo_target/: config.json  docker-compose.yml
deploy/: .env.example  Dockerfile.agent  arckon-agent.service  docker-compose.yml  io.hash.sentinel-agent.plist  io.riskraven.arckon-agent.plist  sentinel-agent.service
docs/: CMMC_MAPPINGS_DRAFT.md  FEDRAMP_MAPPINGS_DRAFT.md  PHASE3_CMMC_DONE_EMAIL.md  PHASE3_UPDATE_EMAIL.md  PHASE3_UPDATE_EMAIL_DETAILED.md  PHASE3_UPDATE_EMAIL_PHASE3_DONE.md  PHASE4_RELEASE_NOTES.md  PILOT_TESTER_HANDOFF.md  ROADMAP.md  SAMPLE_PDF_REPORT.md  SMB_GUIDE.md  SMB_QUICKSTART.md  V1_RELEASE_BOUNDARY.md  ai_governance.md  ai_inventory.md  ai_usage_policy.md  architecture.html  arckon-demo-playbook.md  data_retention_policy.md  profile_reference.html  sentinel-demo-playbook.md
output/: comparison.py  compliance.py  dashboard.py  fleet_report.py  json_report.py  kyverno.py  pdf_report.py  plain_english.py  rego.py  sarif.py  signing.py
profiles/: atlas.json  atlas_controls.json  biotech.json  biotech_controls.json  cmmc.json  cmmc_controls.json  default.json  default_controls.json  docker.json  docker_controls.json  eu_ai_act.json  eu_ai_act_controls.json  fedramp.json  fedramp_controls.json  financial.json  financial_controls.json  healthcare.json  healthcare_controls.json  iso42001.json  iso42001_controls.json  kubernetes.json  lifesciences.json  lifesciences_controls.json  owasp_agentic.json  owasp_agentic_controls.json  professional_services.json  professional_services_controls.json  (+1 more)
(+113 files in other folders)
