[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stig-audit"
version = "0.1.0"
description = "AI security & compliance audit tool (M.A.R.K. Sentinel)"
requires-python = ">=3.11"
authors = [ { name="Keith Ferguson", email="keithferg2018@gmail.com" } ]
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "docs*"]
