[build-system]
requires = ["hatchling>=1.13,<2.0"]
build-backend = "hatchling.build"

[project]
name = "mark-sentinel"
version = "0.1.0"
description = "M.A.R.K. Sentinel — AI Security Audit Tool (packaged entry)"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Keith Ferguson", email = "keithferg2018@gmail.com" } ]
license = { file = "LICENSE" }
keywords = ["ai","security","audit","sentinel"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Project dependencies (from requirements.txt)
dependencies = [
  "PyYAML==6.0.2",
  "google-auth>=2.0.0",
]

[project.scripts]
mark-sentinel = "server:main"

[tool.hatch.build.targets.wheel]
include = ["**/*"]

[tool.hatch.version]
path = "mark_sentinel_version.txt"
