[build-system]
requires = ["hatchling>=1.13,<2.0"]
build-backend = "hatchling.build"

[project]
name = "mark-sentinel"
version = "0.1.0"
description = "M.A.R.K. Sentinel — AI Security Audit Tool (packaged entry)"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Keith Ferguson", email = "keithferg2018@gmail.com" } ]
license = { file = "LICENSE" }
keywords = ["ai","security","audit","sentinel"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Project dependencies (from requirements.txt)
dependencies = [
  "PyYAML==6.0.2",
  "google-auth>=2.0.0",
]

[project.scripts]
mark-sentinel = "server:main"

[tool.hatch.build.targets.wheel]
include = ["**/*"]


[tool.ruff]
target-version = "py312"
exclude = [
    "server.py",          # contains embedded JS f-string templates that confuse ruff
    "admin/",             # separate admin app — not part of sentinel core
    "test/",
    "tests/",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
# Only enforce clear-cut errors; ignore style opinions
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — server.py HTML/JS lines are intentionally long
    "E402",   # module-level import not at top — used in conditional imports
    "E702",   # multiple statements on one line — intentional in storage queries
    "E741",   # ambiguous variable name — l used in list comprehensions
    "F401",   # unused import — some are re-exported
]
